--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 bonus: "Bonus Points",
                 save: "Save & Next",
                 undo: "Undo",
-                round: "R",
+                round: "Round",
                 total: "Total",
                 manifest: "Ship Manifest",
                 resetWarn: "Are you sure you want to delete this game and start over?",
@@ -454,7 +454,7 @@
                 bonus: "Points Bonus",
                 save: "Sauver & Suivant",
                 undo: "Retour",
-                round: "M",
+                round: "Manche",
                 total: "Total",
                 manifest: "Manifeste",
                 resetWarn: "Voulez-vous vraiment effacer cette partie et recommencer ?",
@@ -471,7 +471,7 @@
                     ["Capturer le 14", "+10/20 Bonus"],
                     ["Capturer Sirène", "+20 Bonus"],
                     ["Capturer Pirate", "+30 Bonus"],
-                    ["Skull King capture Pirate", "+30 Bonus chaque"]
+                    ["Skull King capture Pirate", "+30 Bonus par pirate"]
                 ]
             }
         };
