--- a/papayoo/index.html
+++ b/papayoo/index.html
@@ -21,17 +21,19 @@
             <button onclick="showRules()"><i class="fas fa-question-circle"></i></button>
             <button onclick="resetGame()"><i class="fas fa-trash-alt"></i></button>
             <button onclick="CommonGame.goHome()"><i class="fas fa-home"></i></button>
+            <button onclick="toggleLang()" id="btn-lang"
+                style="font-size:1.2rem; border-color:var(--accent-green); color:#fff; width:40px;">🇬🇧</button>
         </div>
     </header>
 
     <!-- Setup Screen -->
     <div id="setup-screen" class="container">
-        <h2>Qui joue ?</h2>
+        <h2 data-i18n="who_plays">Qui joue ?</h2>
         <div id="players-list">
             <!-- Inputs generated here -->
         </div>
-        <button class="btn-secondary" onclick="addPlayerInput()">+ Ajouter Joueur</button>
-        <button class="btn-main" onclick="startGame()">Commencer la partie !</button>
+        <button class="btn-secondary" onclick="addPlayerInput()" data-i18n="add_player">+ Ajouter Joueur</button>
+        <button class="btn-main" onclick="startGame()" data-i18n="start_game">Commencer la partie !</button>
     </div>
 
     <!-- Game Board (Hidden initially) -->
@@ -39,7 +41,7 @@
 
         <!-- Dice Section -->
         <div class="dice-section">
-            <div style="font-family:'Bangers'; color:#fff; font-size:1.2rem;">Couleur du Papayoo (7)</div>
+            <div id="dice-label" style="font-family:'Bangers'; color:#fff; font-size:1.2rem;">Papayoo (M 1)</div>
             <div class="color-dice-row" id="dice-row">
                 <button class="suit-btn suit-hearts" onclick="setPapayooColor('♥')">♥</button>
                 <button class="suit-btn suit-diamonds" onclick="setPapayooColor('♦')">♦</button>
@@ -50,7 +52,7 @@
 
         <!-- Papayou Button -->
         <div class="papayou-btn-container">
-            <button class="btn-papayou" onclick="playPapayouSound()">PAPAYOO !</button>
+            <button class="btn-papayou" id="btn-papayou-action" onclick="playPapayouSound()">Papayoo !</button>
         </div>
 
         <!-- Scoreboard -->
@@ -67,19 +69,22 @@
                 </tbody>
                 <tfoot>
                     <tr id="total-row" class="total-row">
-                        <td>Tot.</td>
+                        <td data-i18n="total">Tot.</td>
                         <!-- Totals -->
                     </tr>
                 </tfoot>
             </table>
 
             <div style="padding: 10px;">
-                <button class="btn-main" onclick="openRoundInput()">Noter les points</button>
+                <button class="btn-main" onclick="openRoundInput()" data-i18n="enter_score">Noter les points</button>
+                <button id="btn-final-score" class="btn-main"
+                    style="display:none; margin-top:10px; background:var(--accent-green); color:#000;"
+                    onclick="showFinalRanking()" data-i18n="show_final">Voir Scores Finaux</button>
             </div>
 
             <div class="common-footer">
-                <button class="btn-home" onclick="CommonGame.goHome()"><i class="fas fa-arrow-left"></i>
-                    Accueil</button>
+                <button class="btn-home" onclick="CommonGame.goHome()"><i class="fas fa-arrow-left"></i> <span
+                        data-i18n="home">Accueil</span></button>
             </div>
         </div>
     </div>
@@ -87,24 +92,28 @@
     <!-- Round Input Modal -->
     <div id="round-modal" class="modal">
         <div class="modal-content">
-            <h2>Résultats Manche <span id="modal-round-num"></span></h2>
+            <h2><span data-i18n="round_res">Résultats Manche</span> <span id="modal-round-num"></span></h2>
             <div id="modal-inputs"></div>
 
             <div class="score-hud" id="score-hud">Total: 0 / 250</div>
 
-            <button class="btn-secondary" onclick="fillMissingScore()">Compléter Auto</button>
-            <button class="btn-main" onclick="saveRoundScores()">Valider</button>
-            <button class="btn-secondary" onclick="closeModal()" style="border:none; color:#aaa;">Annuler</button>
+            <button class="btn-auto" onclick="fillMissingScore()" data-i18n="auto_complete">Compléter Auto</button>
+            <button class="btn-main" onclick="saveRoundScores()" data-i18n="validate">Valider</button>
+            <button class="btn-secondary" onclick="closeModal()" style="border:none; color:#aaa;"
+                data-i18n="cancel">Annuler</button>
         </div>
     </div>
 
     <!-- Final Ranking Modal -->
     <div id="ranking-modal" class="modal">
         <div class="modal-content" style="text-align: center;">
-            <h2>🏆 Résultats Finaux</h2>
-            <div id="ranking-list" style="text-align:left; margin-bottom:20px;"></div>
-            <button class="btn-main" onclick="shareResults()">📸 Partager Image</button>
-            <button class="btn-secondary" onclick="resetGame()">Nouvelle Partie</button>
+            <div id="rank-capture-area" style="background:var(--bg-color); padding:10px; border-radius:8px;">
+                <h2 data-i18n="final_res">🏆 Résultats Finaux</h2>
+                <div id="ranking-list" style="text-align:left; margin-bottom:20px;"></div>
+            </div>
+
+            <button class="btn-main" onclick="shareResults()" data-i18n="share">📸 Partager</button>
+            <button class="btn-secondary" onclick="resetGame()" data-i18n="new_game">Nouvelle Partie</button>
         </div>
     </div>
 
@@ -112,22 +121,23 @@
     <div id="rules-modal" class="modal">
         <div class="modal-content rules-content">
             <h2>Règles Papayoo</h2>
-            <p><strong>But :</strong> Faire le MOINS de points possible.</p>
-            <p><strong>Papayoo :</strong> Le 7 de la couleur du dé vaut 40 points.</p>
-            <p><strong>Les Payoo :</strong> Les cartes Payoo (Points) valent leur valeur (1 à 20).</p>
-            <p><strong>Total :</strong> 250 points par manche.</p>
-            <p><strong>Donne :</strong>
-                3j: 20 cartes (reste 0)<br>
-                4j: 15 cartes (reste 0)<br>
-                5j: 12 cartes (reste 0)<br>
-                6j: 10 cartes (reste 0)<br>
-            </p>
-            <button class="btn-main"
-                onclick="document.getElementById('rules-modal').classList.remove('visible')">Fermer</button>
+            <div id="rules-text"></div>
+            <button class="btn-main" onclick="document.getElementById('rules-modal').classList.remove('visible')"
+                data-i18n="close">Fermer</button>
         </div>
     </div>
 
-    <audio id="sfx-papayou" src="../papayou.mp3"></audio> <!-- Assuming I find it or put it there -->
+    <!-- Warning inline modal -->
+    <div id="warning-modal" class="modal">
+        <div class="modal-content" style="background:#c0392b; border-color:#fff;">
+            <h3 style="margin-top:0;">⚠️ Attention</h3>
+            <p id="warning-msg" style="font-size:1.2rem;"></p>
+            <button class="btn-main" style="background:#fff; color:#c0392b;"
+                onclick="document.getElementById('warning-modal').classList.remove('visible')">OK</button>
+        </div>
+    </div>
+
+    <audio id="sfx-papayou" src="../papayou.mp3"></audio>
     <script src="../common/script.js"></script>
     <script src="script.js"></script>
 </body>
