--- a/skullking/index.html
+++ b/skullking/index.html
@@ -619,6 +619,9 @@
         <div class="header-controls">
             <button class="icon-btn" onclick="showRules()"><i class="fas fa-scroll"></i></button>
             <button class="icon-btn" onclick="resetGame()"><i class="fas fa-trash-alt"></i></button>
+            <a href="../index.html" class="icon-btn"
+                style="text-decoration:none; display:inline-flex; align-items:center; justify-content:center;"><i
+                    class="fas fa-home"></i></a>
             <button class="icon-btn" onclick="toggleLanguage()" id="lang-btn">🇬🇧</button>
         </div>
     </header>
@@ -718,7 +721,7 @@
             <tfoot id="table-foot"></tfoot>
         </table>
         <div class="common-footer" style="padding-bottom: 20px;">
-            <a href="../index.html" class="btn-home"><i class="fas fa-arrow-left"></i> Accueil</a>
+            <a href="../index.html" class="btn-home"><i class="fas fa-arrow-left"></i> Home</a>
         </div>
     </div>
 
