Who got the Papayoo?: Trigger the sound, pick the unfortunate player, and see the Carlos icon mark their round forever. Polished UI: Full "Manche" labels. "Papayoo" title now appears on your shared results. Flexible Resets: Choose to Restart with Same Players to run it back instantly, or New Game for a fresh start.

--- a/papayoo/index.html
+++ b/papayoo/index.html
@@ -104,20 +104,36 @@
         </div>
     </div>
 
+    <!-- Who got Papayoo Modal -->
+    <div id="carlos-modal" class="modal">
+        <div class="modal-content">
+            <h3 data-i18n="who_papayoo">Qui a pris le Papayoo ?</h3>
+            <div id="carlos-list" style="display:flex; flex-direction:column; gap:10px; margin-bottom:20px;"></div>
+            <button class="btn-secondary" onclick="closeCarlosModal()" data-i18n="cancel">Annuler</button>
+        </div>
+    </div>
+
     <!-- Final Ranking Modal -->
     <div id="ranking-modal" class="modal">
         <div class="modal-content" style="text-align: center; position: relative;">
             <button onclick="closeFinalModal()"
-                style="position: absolute; top: 10px; right: 10px; background: transparent; border: none; color: #fff; font-size: 1.5rem; cursor: pointer; z-index: 10;">
+                style="position: absolute; top: 10px; right: 10px; background: transparent; border: none; color: #333; font-size: 1.5rem; cursor: pointer; z-index: 10;">
                 <i class="fas fa-times"></i>
             </button>
             <div id="rank-capture-area" style="background:var(--bg-color); padding:10px; border-radius:8px;">
-                <h2 data-i18n="final_res">🏆 Résultats Finaux</h2>
+                <h2 style="font-family:'Bangers'; color:var(--primary); font-size:2rem; margin-bottom:5px;">Papayoo</h2>
+                <h3 data-i18n="final_res">🏆 Résultats Finaux</h3>
                 <div id="ranking-list" style="text-align:left; margin-bottom:20px;"></div>
             </div>
 
             <button class="btn-main" onclick="shareResults()" data-i18n="share">📸 Partager</button>
-            <button class="btn-secondary" onclick="resetGame()" data-i18n="new_game">Nouvelle Partie</button>
+
+            <button class="btn-secondary"
+                style="border:1px solid var(--primary); padding:10px; margin-top:15px; text-decoration:none; font-weight:bold;"
+                onclick="restartSamePlayers()" data-i18n="valid_same_players">Rejouer (Mêmes Joueurs)</button>
+
+            <button class="btn-secondary" style="color:#e74c3c; margin-top:10px;" onclick="resetGame()"
+                data-i18n="new_game_players">Nouvelle Partie (Nouveaux Joueurs)</button>
         </div>
     </div>
 
