Moved media files to game folders and updated references. Added a favicon.svg. Added a Help module to the home page with README content. Translated the Skull King Edit modal.

--- a/dutch/index.html
+++ b/dutch/index.html
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <audio id="sfx-dutch" src="../dutch.mp3"></audio>
+    <audio id="sfx-dutch" src="dutch.mp3"></audio>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
     <script src="../common/script.js"></script>
