--- a/papayoo/index.html
+++ b/papayoo/index.html
@@ -158,7 +158,7 @@
         </div>
     </div>
 
-    <audio id="sfx-papayou" src="../papayou.mp3"></audio>
+    <audio id="sfx-papayou" src="papayou.mp3"></audio>
     <script src="../common/script.js"></script>
     <script src="script.js"></script>
 </body>
